@@ -277,32 +277,6 @@ public class UtilitiesTest extends TestCase {
 	/**
 	 *
 	 */
-	public void testGetClassLoaderFileThrowsNullPointerException() throws Throwable {
-		// FIXME - this seems to give different results on JDK 1.4 and JDK 1.6
-//		try {
-//			Utilities.getClassLoaderFile(null);
-//			fail("Expected NullPointerException to be thrown");
-//		} catch (NullPointerException ex) {
-//			assertNull("ex.getMessage()", ex.getMessage()); // Adjusted to other NPE
-//		}
-	}
-
-	/**
-	 *
-	 */
-	public void testGetClassLoaderRootThrowsException() throws Throwable {
-		// FIXME
-//		try {
-//			Utilities.getClassLoaderRoot();
-//			fail("Expected Exception to be thrown");
-//		} catch (Exception ex) {
-//			assertEquals("ex.getMessage()", "Unable to find ApplicationResources.properties", ex.getMessage());
-//		}
-	}
-
-	/**
-	 *
-	 */
 	public void testReadFileThrowsFileNotFoundException() throws Throwable {
 		try {
 			Utilities.readFile("fakeFileName");
